# python-db-practice

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bi/: Dockerfile  pyproject.toml  requirements.txt
bi/src/: constants.py  db_client.py  model.py  panel.py  schema.py  service.py
jupyter/: Dockerfile  pyproject.toml  requirements.txt
jupyter/work/.ipynb_checkpoints/: python_mysql_query-checkpoint.ipynb
mysql/: Dockerfile  mysql.md  mysql_guide.md  mysql_tips.md
mysql/conf.d/: my.cnf
mysql/data/: get_baseball_data.py  pop_data.csv  test.sql  test2.sql
mysql/sql/: 01_create_tables.sql  02_import_data.sql  03_create_master_table.sql  04_insert_master_data.sql  05_create_user.sql
