[tool.poetry]
name = "python-db-practice"
version = "0.1.0"
description = ""
authors = ["YuyaK-0913 <kuniyu.0913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybaseball = "^2.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
