[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["YuyaK-0913 <kuniyu.0913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
mysql-connector-python = "^9.1.0"
streamlit = "^1.39.0"
pydantic = "^2.9.2"
panel = "^1.5.4"
holoviews = "^1.20.0"
hvplot = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
